packages/forge-dsl/fixtures/errors/e05-unterminated-string.fable
// expect: FORGE002
VAR name = "Reynard
-> go
=== go ===
Hello {name}.
-> END
